--- a/scripts/scripts4/banco.ipynb
+++ b/scripts/scripts4/banco.ipynb
@@ -2,40 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
+   "id": "mysterious-findings",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def menu():\n",
+    "    print(\"1. Ingresar dinero\")\n",
+    "    print(\"2. Sacar dinero\")\n",
+    "    print(\"3. Ver saldo\")\n",
+    "    print(\"4. Ver saldo y última operación\")\n",
+    "    print(\"5. Pagar recibo\")\n",
+    "    print(\"6. Imprimir libreta\")\n",
+    "    print(\"0. Salir\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "interior-woman",
    "metadata": {},
    "outputs": [],
    "source": [
     "def ingreso(a):\n",
-    "    saldo = saldo + a\n",
-    "    fecha()\n",
-    "    operaciones.append(fecha(),\"Ingreso de \",a,\"€\")"
+    "    dinero = float(saldo + a)\n",
+    "    \n",
+    "    return dinero"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "hazardous-invite",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def debito():"
+    "def debito(a):\n",
+    "    dinero = float(saldo - a)\n",
+    "    \n",
+    "    return dinero"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "interracial-casino",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ver_saldo():"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "failing-census",
    "metadata": {},
    "outputs": [],
@@ -48,39 +58,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "appointed-declaration",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pago_recibos():"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "normal-incentive",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recibo_operacion():"
+    "def recibo_operacion():\n",
+    "    ultima=len(operaciones) - 1\n",
+    "    recibo_operacion = operaciones[ultima]\n",
+    "    \n",
+    "    return recibo_operacion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "italic-result",
    "metadata": {},
    "outputs": [],
    "source": [
     "def historiallib():\n",
-    "    for i in range(0,len(operaciones)+1):\n",
+    "    for i in range(0,len(operaciones)):\n",
     "        print(operaciones[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "entertaining-peninsula",
    "metadata": {},
    "outputs": [],
@@ -91,15 +95,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "mobile-healthcare",
    "metadata": {},
    "outputs": [],
    "source": [
-    "operaciones = list()\n",
-    "saldo = random.randrange(1000,5000)\n",
-    "#operaciones.append()\n",
-    "print(fecha())"
+    "operaciones = []\n",
+    "recibos = [['luz',round(random.uniform(19.95,69.95),2)],['gas',round(random.uniform(19.95,49.95),2)],['agua',round(random.uniform(19.95,55.95),2)],['hipoteca',round(random.uniform(419.95,669.95),2)],['seguro',round(random.uniform(89.95,245.95),2)],['prestamo',round(random.uniform(51.95,199.95),2)]] \n",
+    "saldo = random.randrange(1000,5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "curious-velvet",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Ingresar dinero\n",
+      "2. Sacar dinero\n",
+      "3. Ver saldo\n",
+      "4. Ver saldo y última operación\n",
+      "5. Pagar recibo\n",
+      "6. Imprimir libreta\n",
+      "0. Salir\n",
+      "\n",
+      "\n",
+      "Operación a realizar: 3\n",
+      "Su saldo es de  3181 €\n",
+      "\n",
+      "\n",
+      "1. Ingresar dinero\n",
+      "2. Sacar dinero\n",
+      "3. Ver saldo\n",
+      "4. Ver saldo y última operación\n",
+      "5. Pagar recibo\n",
+      "6. Imprimir libreta\n",
+      "0. Salir\n",
+      "\n",
+      "\n",
+      "\n",
+      "Operación a realizar: 5\n",
+      "\n",
+      " ('2021-04-22 18:58:17', 'Pago de', 115.95, '€ en concepto de', 'prestamo') \n",
+      "\n",
+      "\n",
+      "1. Ingresar dinero\n",
+      "2. Sacar dinero\n",
+      "3. Ver saldo\n",
+      "4. Ver saldo y última operación\n",
+      "5. Pagar recibo\n",
+      "6. Imprimir libreta\n",
+      "0. Salir\n",
+      "\n",
+      "\n",
+      "\n",
+      "Operación a realizar: 4\n",
+      "Su saldo es de  3065.05 €\n",
+      "\n",
+      " ('2021-04-22 18:58:17', 'Pago de', 115.95, '€ en concepto de', 'prestamo') \n",
+      "\n",
+      "\n",
+      "1. Ingresar dinero\n",
+      "2. Sacar dinero\n",
+      "3. Ver saldo\n",
+      "4. Ver saldo y última operación\n",
+      "5. Pagar recibo\n",
+      "6. Imprimir libreta\n",
+      "0. Salir\n",
+      "\n",
+      "\n",
+      "\n",
+      "Operación a realizar: 5\n",
+      "\n",
+      " ('2021-04-22 18:58:26', 'Pago de', 39.84, '€ en concepto de', 'luz') \n",
+      "\n",
+      "\n",
+      "1. Ingresar dinero\n",
+      "2. Sacar dinero\n",
+      "3. Ver saldo\n",
+      "4. Ver saldo y última operación\n",
+      "5. Pagar recibo\n",
+      "6. Imprimir libreta\n",
+      "0. Salir\n",
+      "\n",
+      "\n",
+      "\n",
+      "Operación a realizar: 5\n",
+      "\n",
+      " ('2021-04-22 18:58:29', 'Pago de', 39.84, '€ en concepto de', 'luz') \n",
+      "\n",
+      "\n",
+      "1. Ingresar dinero\n",
+      "2. Sacar dinero\n",
+      "3. Ver saldo\n",
+      "4. Ver saldo y última operación\n",
+      "5. Pagar recibo\n",
+      "6. Imprimir libreta\n",
+      "0. Salir\n",
+      "\n",
+      "\n",
+      "\n",
+      "Operación a realizar: 6\n",
+      "('2021-04-22 18:58:17', 'Pago de', 115.95, '€ en concepto de', 'prestamo')\n",
+      "('2021-04-22 18:58:26', 'Pago de', 39.84, '€ en concepto de', 'luz')\n",
+      "('2021-04-22 18:58:29', 'Pago de', 39.84, '€ en concepto de', 'luz')\n",
+      "2985.37 \n",
+      "\n",
+      "\n",
+      "1. Ingresar dinero\n",
+      "2. Sacar dinero\n",
+      "3. Ver saldo\n",
+      "4. Ver saldo y última operación\n",
+      "5. Pagar recibo\n",
+      "6. Imprimir libreta\n",
+      "0. Salir\n",
+      "\n",
+      "\n",
+      "\n",
+      "Operación a realizar: 3\n",
+      "Su saldo es de  2985.37 €\n",
+      "\n",
+      "\n",
+      "1. Ingresar dinero\n",
+      "2. Sacar dinero\n",
+      "3. Ver saldo\n",
+      "4. Ver saldo y última operación\n",
+      "5. Pagar recibo\n",
+      "6. Imprimir libreta\n",
+      "0. Salir\n",
+      "\n",
+      "\n",
+      "\n",
+      "Operación a realizar: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "menu()    #Llamada a la función menu\n",
+    "\n",
+    "opcion = int(input(\"\\nOperación a realizar: \"))   #Pedir el valor de la opción a realizar\n",
+    "\n",
+    "while (opcion != 0):\n",
+    "    \n",
+    "    if opcion == 1:     #Llamada a la función ingreso\n",
+    "        cantidad = float(input(\"Introduce la cantidad a ingresar: \"))\n",
+    "        saldo = ingreso(cantidad)\n",
+    "        historial = fecha(),\"Ingreso de\", cantidad,\"€, su saldo es de\",saldo\n",
+    "        operaciones.append(historial)\n",
+    "        print(\"\\n\",recibo_operacion(),\"\\n\\n\")\n",
+    "        \n",
+    "    elif opcion == 2:   #Llamada a la función debito\n",
+    "        cantidad = float(input(\"Introduce la cantidad a retirar: \"))\n",
+    "        saldo = debito(cantidad)\n",
+    "        historial = fecha(),\"Retirada de\", cantidad,\"€, su saldo es de\",saldo,\"€\"\n",
+    "        operaciones.append(historial)\n",
+    "        print(\"\\n\",recibo_operacion(),\"\\n\\n\")\n",
+    "    \n",
+    "    elif opcion == 3:   #LLamada a la función ver_saldo\n",
+    "        print(\"Su saldo es de \",saldo,\"€\\n\\n\")\n",
+    "        \n",
+    "        \n",
+    "    elif opcion == 4:   #\n",
+    "        print(\"Su saldo es de \",saldo,\"€\")\n",
+    "        print(\"\\n\",recibo_operacion(),\"\\n\\n\")\n",
+    "    \n",
+    "    elif opcion == 5:    #Llamada a la función pago_recibos\n",
+    "        recibo = random.choice(recibos)\n",
+    "        historial = fecha(),\"Pago de\", recibo[1],\"€ en concepto de\",recibo[0]\n",
+    "        operaciones.append(historial)\n",
+    "        cantidad = recibo[1]\n",
+    "        saldo = debito(cantidad)\n",
+    "        print(\"\\n\",recibo_operacion(),\"\\n\\n\")\n",
+    "        \n",
+    "    elif opcion == 6:    #Llamada a la función historiallib\n",
+    "        historiallib()\n",
+    "        print(\"Saldo total: \",saldo,\"€\\n\\n\")\n",
+    "        \n",
+    "    else:\n",
+    "        print(\"No has introducido una opción válida.\")\n",
+    "    \n",
+    "    menu()\n",
+    "    \n",
+    "    opcion = int(input(\"\\n\\nOperación a realizar: \"))    #Volver a pedir el valor de la opción a realizar"
    ]
   }
  ],
