--- a/scripts/scripts5/cifrar.ipynb
+++ b/scripts/scripts5/cifrar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "permanent-strain",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "sacred-repeat",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "dramatic-habitat",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "detailed-cancellation",
    "metadata": {},
    "outputs": [],
@@ -66,19 +66,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "directed-tracy",
    "metadata": {},
    "outputs": [],
    "source": [
     "def cifrar(a):\n",
     "    folder = leerd(a)\n",
-    "    token "
+    "    carpeta = leerd(folder)\n",
+    "        \n",
+    "        for i in carpeta:\n",
+    "            with open(i, 'rb') as file:\n",
+    "                archivo_info = file.read()\n",
+    "            crypt = k.encrypt(archivo_info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "stylish-aaron",
    "metadata": {},
    "outputs": [],
@@ -95,33 +100,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "worst-illustration",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from os import listdir\n",
-    "#from cryptography.fernet import Fernet\n",
+    "from cryptography.fernet import Fernet\n",
     "from Crypto.Cipher import AES\n",
     "from Crypto.Random import get_random_bytes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "79f5e1ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "key = get_random_bytes(16)\n",
-    "mode = AES.MODE_EAX\n",
-    "k = AES.new(key, mode)"
+    "#key = get_random_bytes(16)\n",
+    "#mode = AES.MODE_EAX\n",
+    "#k = AES.new(key, mode)\n",
+    "key = Fernet.generate_key()\n",
+    "k = Fernet(key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "provincial-wagner",
    "metadata": {},
    "outputs": [
@@ -133,6 +140,8 @@
       "2. Crear archivo.\n",
       "3. Borrar archivo.\n",
       "4. Borrar directorio.\n",
+      "5. Encriptar carpeta.\n",
+      "6. Desencriptar carpeta.\n",
       "0. Salir.\n",
       "\n",
       "\n",
@@ -164,14 +173,12 @@
     "    \n",
     "    elif select == 5:\n",
     "        folder = str(input(\"Introduce la ruta: \"))\n",
-    "        carpeta = leerd(folder)\n",
-    "        for i in range(0,len(carpeta)):\n",
-    "            k.encrypt(carpeta[i])\n",
     "            \n",
     "    elif select == 6:\n",
     "        folder = str(input(\"Introduce la ruta: \"))\n",
     "        carpeta = leerd(folder)\n",
     "        for i in range(0,len(carpeta)):\n",
+    "            archivo = open(carpeta[i], 'r')\n",
     "            k.decrypt(carpeta[i])            \n",
     "\n",
     "    print(\"\\n\\n\")    \n",
@@ -205,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.1+"
   }
  },
  "nbformat": 4,
