--- a/scripts/scripts5/cifrar.ipynb
+++ b/scripts/scripts5/cifrar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "permanent-strain",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "sacred-repeat",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "dramatic-habitat",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "detailed-cancellation",
    "metadata": {},
    "outputs": [],
@@ -66,24 +66,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "012faaf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def directorio(a):\n",
+    "    return [os.path.join(a, f) for f in os.listdir(a)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "directed-tracy",
    "metadata": {},
    "outputs": [],
    "source": [
     "def cifrar(a):\n",
-    "    folder = leerd(a)\n",
-    "    carpeta = leerd(folder)\n",
-    "        \n",
-    "        for i in carpeta:\n",
-    "            with open(i, 'rb') as file:\n",
-    "                archivo_info = file.read()\n",
-    "            crypt = k.encrypt(archivo_info)"
+    "    carpeta = directorio(a)\n",
+    "\n",
+    "    for i in carpeta:\n",
+    "        file1 = open(i, 'rb')\n",
+    "        archivo_info = file1.read()\n",
+    "        crypt = k.encrypt(archivo_info)\n",
+    "        file2 = open(i, 'wb')\n",
+    "        file2.write(crypt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "6305ee67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def descifrar(a):\n",
+    "    carpeta = directorio(a)\n",
+    "\n",
+    "    for i in carpeta:\n",
+    "        file1 = open(i, 'rb')\n",
+    "        encrypted_info = file1.read()\n",
+    "        decrypt = k.decrypt(encrypted_info)\n",
+    "        file2 = open(i, 'wb')\n",
+    "        file2.write(decrypt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1692814",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def password():\n",
+    "    caract = string.ascii_letters+string.digits\n",
+    "    contraseña = (\"\").join(random.choice(caract)for i in range(32))\n",
+    "    return contraseña"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "stylish-aaron",
    "metadata": {},
    "outputs": [],
@@ -93,14 +136,14 @@
     "    print(\"2. Crear archivo.\")\n",
     "    print(\"3. Borrar archivo.\")\n",
     "    print(\"4. Borrar directorio.\")\n",
-    "    print(\"5. Encriptar carpeta.\")\n",
-    "    print(\"6. Desencriptar carpeta.\")\n",
+    "    print(\"5. Cifrar carpeta.\")\n",
+    "    print(\"6. Descifrar carpeta.\")\n",
     "    print(\"0. Salir.\\n\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "worst-illustration",
    "metadata": {},
    "outputs": [],
@@ -108,19 +151,24 @@
     "import os\n",
     "from os import listdir\n",
     "from cryptography.fernet import Fernet\n",
-    "from Crypto.Cipher import AES\n",
-    "from Crypto.Random import get_random_bytes"
+    "from Cryptodome.Cipher import AES\n",
+    "from Cryptodome.Random import get_random_bytes\n",
+    "from base64 import b64encode, b64decode\n",
+    "import hashlib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "79f5e1ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#key = get_random_bytes(16)\n",
-    "#mode = AES.MODE_EAX\n",
+    "#password()\n",
+    "#salt = get_random_bytes(AES.block_size)\n",
+    "#key = hashlib.scrypt(\n",
+    "#    password.encode(), salt=salt, n=2**14, r=8, p=1, dklen=32)\n",
+    "#mode = AES.MODE_GCM\n",
     "#k = AES.new(key, mode)\n",
     "key = Fernet.generate_key()\n",
     "k = Fernet(key)"
@@ -128,27 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "provincial-wagner",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. Leer directorio.\n",
-      "2. Crear archivo.\n",
-      "3. Borrar archivo.\n",
-      "4. Borrar directorio.\n",
-      "5. Encriptar carpeta.\n",
-      "6. Desencriptar carpeta.\n",
-      "0. Salir.\n",
-      "\n",
-      "\n",
-      "Escoge una opción: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "menu()\n",
     "select=int(input(\"Escoge una opción: \"))\n",
@@ -173,27 +204,17 @@
     "    \n",
     "    elif select == 5:\n",
     "        folder = str(input(\"Introduce la ruta: \"))\n",
+    "        cifrar(folder)\n",
     "            \n",
     "    elif select == 6:\n",
-    "        folder = str(input(\"Introduce la ruta: \"))\n",
-    "        carpeta = leerd(folder)\n",
-    "        for i in range(0,len(carpeta)):\n",
-    "            archivo = open(carpeta[i], 'r')\n",
-    "            k.decrypt(carpeta[i])            \n",
-    "\n",
+    "        folder = str(input(\"Introduce la ruta: \"))          \n",
+    "        descifrar(folder)\n",
+    "        \n",
     "    print(\"\\n\\n\")    \n",
     "    menu()\n",
     "    select=int(input(\"Escoge una opción: \"))\n",
     "    print(\"\\n\\n\") "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33b8fb1d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -212,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1+"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
