--- a/scripts/scripts5/matrices1.ipynb
+++ b/scripts/scripts5/matrices1.ipynb
@@ -24,7 +24,7 @@
     "    for i in a:\n",
     "        for valor in i:\n",
     "            print(\"\\t\", valor, end=\" \")\n",
-    "        print()"
+    "        print(\"\\n\")"
    ]
   },
   {
@@ -36,11 +36,11 @@
    "source": [
     "def sum_matrix(a):\n",
     "    suma = 0\n",
-    "    for i in a:\n",
-    "        posicion1 = 1\n",
-    "        for num in i:\n",
-    "            if ( contador != i ):\n",
-    "                suma += num \n",
+    "    for columna in range(len(a)):\n",
+    "        for fila in range(len(a)):\n",
+    "            if ( fila != columna ):\n",
+    "                valor = a[columna][fila]\n",
+    "                suma = suma + valor\n",
     "    return suma            "
    ]
   },
@@ -51,9 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"La matriz es:\\n\") \n",
     "show_matrix(matriz)\n",
     "resultado = (sum_matrix(matriz))\n",
-    "print(resultado)"
+    "print(\"La suma de los números que no se encuentran en la diagonal da un resultado de\",resultado)"
    ]
   },
   {
@@ -81,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1+"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
