--- a/scripts/scripts5/cifrar.ipynb
+++ b/scripts/scripts5/cifrar.ipynb
@@ -7,12 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def leerd(a):\n",
+    "def leerd(a):         #Función que lee directorios, utilizando una lista para almacenar lo que el directorio contiene,\n",
+    "                      #para después devolver la lista.\n",
     "    list_files = []\n",
-    "    if a:\n",
+    "    \n",
+    "    if a:             #Comprueba que el directorio existe.\n",
     "        for i in listdir(a):\n",
     "            list_files.append(i)\n",
-    "    else:\n",
+    "            \n",
+    "    else:             #Si no existe devuelve el mensaje de error.\n",
     "        return \"EL directorio no existe.\"\n",
     "    \n",
     "    return list_files"
@@ -25,11 +28,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_file(a):\n",
-    "    if os.path.exists(a):\n",
+    "def create_file(a):   #Función que crea un fichero vació con el nombre en el directorio en el que nos encontramos.\n",
+    "    \n",
+    "    if os.path.exists(a):  #Comprobando que el fichero no existe.\n",
     "        return \"El archivo ya existe.\"\n",
     "    \n",
-    "    else:\n",
+    "    else:             #Escribe un fichero vacío con el nombre indicado.\n",
     "        f = open(a, 'w').close()\n",
     "    return f"
    ]
@@ -41,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def del_file(a):\n",
+    "def del_file(a):       #Función que elimina un fichero, comprobando si existe\n",
     "    if os.path.exists(a):\n",
     "        os.remove(a)\n",
     "        \n",
@@ -56,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def del_fold(a):\n",
+    "def del_fold(a):     #función que elimina un directorio comprobado si existe\n",
     "    if os.path.exists(a):\n",
     "        os.rmdir(a)\n",
     "        \n",
@@ -71,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def directorio(a):\n",
+    "def directorio(a):     #Función que lista todos los ficheros de un directorio pero con la ruta absoluta.\n",
     "    return [os.path.join(a, f) for f in os.listdir(a)]"
    ]
   },
@@ -82,13 +86,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cifrar(a):\n",
-    "    carpeta = directorio(a)\n",
+    "def cifrar(a):         #Función que cifra todos los archivos de un directorio.\n",
+    "    \n",
+    "    carpeta = directorio(a)   #Listamos todos los archivos del directorio introducido introduciendo la ruta absoluta,\n",
+    "                              #ya que sino por defecto utiliza el directorio actual.\n",
     "\n",
-    "    for i in carpeta:\n",
-    "        file1 = open(i, 'rb')\n",
+    "    for i in carpeta:  #Bucle que recorre cada fichero, lo lee como binario, lo almacena en una variable, cifra el contenido\n",
+    "                       #vuelve a abrir el fichero y esta vez escribe la información cifrada.\n",
+    "            \n",
+    "        file1 = open(i, 'rb')       #Variable que abre el fichero para después almacenarlo en otra variable\n",
     "        archivo_info = file1.read()\n",
-    "        crypt = k.encrypt(archivo_info)\n",
+    "        \n",
+    "        crypt = k.encrypt(archivo_info)  #Variable que almacena la información cifrada(utilizando la clave generada) y se la pas\n",
+    "                                         #a a la siguiente variable, para que la escriba sobre el fichero.\n",
     "        file2 = open(i, 'wb')\n",
     "        file2.write(crypt)"
    ]
@@ -100,13 +110,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def descifrar(a):\n",
-    "    carpeta = directorio(a)\n",
+    "def descifrar(a):         #Función que descifra los ficheros de un directorio.\n",
+    "    \n",
+    "    carpeta = directorio(a)   #Listamos todos los archivos del directorio introducido introduciendo la ruta absoluta,\n",
+    "                              #ya que sino por defecto utiliza el directorio actual.\n",
     "\n",
-    "    for i in carpeta:\n",
-    "        file1 = open(i, 'rb')\n",
+    "    for i in carpeta:     #Bucle que recorre cada fichero, lo lee como binario, lo almacena en una variable, descifra el contenido\n",
+    "                          #vuelve a abrir el fichero y esta vez escribe la información descifrada.\n",
+    "            \n",
+    "        file1 = open(i, 'rb')  #Variable que abre el fichero para después almacenarlo en otra variable\n",
     "        encrypted_info = file1.read()\n",
-    "        decrypt = k.decrypt(encrypted_info)\n",
+    "        \n",
+    "        decrypt = k.decrypt(encrypted_info)  #Variable que almacena la información descifrada(utilizando la clave generada) y se la pas\n",
+    "                                             #a a la siguiente variable, para que la escriba sobre el fichero.\n",
     "        file2 = open(i, 'wb')\n",
     "        file2.write(decrypt)"
    ]
@@ -118,10 +134,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def password():\n",
-    "    caract = string.ascii_letters+string.digits\n",
-    "    contraseña = (\"\").join(random.choice(caract)for i in range(32))\n",
-    "    return contraseña"
+    "#def password():   #Función que genera una contraseña para utilizar AES256\n",
+    "#    caract = string.ascii_letters+string.digits\n",
+    "#    contraseña = (\"\").join(random.choice(caract)for i in range(32))\n",
+    "#    return contraseña"
    ]
   },
   {
@@ -131,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def menu():\n",
+    "def menu():        #función que muestra un menú para realizar las diferentes funciones.\n",
     "    print(\"1. Leer directorio.\")\n",
     "    print(\"2. Crear archivo.\")\n",
     "    print(\"3. Borrar archivo.\")\n",
@@ -143,18 +159,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "worst-illustration",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importamos las librerias necesarias para realizar las funciones.\n",
     "import os\n",
     "from os import listdir\n",
     "from cryptography.fernet import Fernet\n",
     "from Cryptodome.Cipher import AES\n",
     "from Cryptodome.Random import get_random_bytes\n",
     "from base64 import b64encode, b64decode\n",
-    "import hashlib"
+    "import hashlib\n",
+    "import platform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "available-lawyer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Pruebas con AES 256"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "inside-postcard",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#password()\n",
+    "#salt = get_random_bytes(AES.block_size)\n",
+    "#key = hashlib.scrypt(\n",
+    "#    password.encode(), salt=salt, n=2**14, r=8, p=1, dklen=32)\n",
+    "#mode = AES.MODE_GCM\n",
+    "#k = AES.new(key, mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "close-semester",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Generar y almacenar la clave para cifrar y descifrar"
    ]
   },
   {
@@ -164,12 +217,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#password()\n",
-    "#salt = get_random_bytes(AES.block_size)\n",
-    "#key = hashlib.scrypt(\n",
-    "#    password.encode(), salt=salt, n=2**14, r=8, p=1, dklen=32)\n",
-    "#mode = AES.MODE_GCM\n",
-    "#k = AES.new(key, mode)\n",
     "key = Fernet.generate_key()\n",
     "k = Fernet(key)"
    ]
@@ -181,32 +228,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "menu()\n",
+    "menu()    #Mostramos el menú y pedimos la opción a realizar\n",
     "select=int(input(\"Escoge una opción: \"))\n",
-    "while select != 0:\n",
-    "    if select == 1:\n",
+    "\n",
+    "while select != 0:     #Bucle para que el progarama no finalice hasta que el usuario lo desee.\n",
+    "    \n",
+    "    if select == 1:   #Lista directorios utilizando la función leerd y un bucle para mostrar cada fichero\n",
     "        folder = str(input(\"Introduce la ruta: \"))\n",
     "        carpeta = leerd(folder)\n",
     "        for i in range(0,len(carpeta)):\n",
     "            print(carpeta[i])\n",
     "    \n",
-    "    elif select == 2:\n",
+    "    elif select == 2:  #Crea archivo vació con el nombre deseado.\n",
     "        file = str(input(\"Introduce el nombre del archivo a crear: \"))\n",
     "        create_file(file)\n",
     "    \n",
-    "    elif select == 3:\n",
+    "    elif select == 3:  #Elimina un archivo introduciendo el nombre(directorio actual) o la ruta absoluta.\n",
     "        file = str(input(\"Introduce el nombre del archivo a borrar: \"))\n",
     "        del_file(file)\n",
     "    \n",
-    "    elif select == 4:\n",
+    "    elif select == 4:  #Elimina un directorio introduciendo el nombre(directorio actual) o la ruta absoluta\n",
     "        folder = str(input(\"Introduce el nombre de la carpeta a borrar: \"))\n",
     "        del_fold(file)\n",
     "    \n",
-    "    elif select == 5:\n",
+    "    elif select == 5: #Cifra un directorio mediante la función cifrar, introduciendo la ruta absoluta, y utilizando la clave generada con fernet.\n",
     "        folder = str(input(\"Introduce la ruta: \"))\n",
     "        cifrar(folder)\n",
     "            \n",
-    "    elif select == 6:\n",
+    "    elif select == 6:  #Descifra un directorio mediante la función descifrar, introduciendo la ruta absoluta, y utilizando la clave generada con fernet.\n",
     "        folder = str(input(\"Introduce la ruta: \"))          \n",
     "        descifrar(folder)\n",
     "        \n",
@@ -233,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.1+"
   }
  },
  "nbformat": 4,
