--- a/scripts/scripts5/hospitalmatrix.ipynb
+++ b/scripts/scripts5/hospitalmatrix.ipynb
@@ -7,9 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def menu():\n",
+    "def menu():       #Función que realiza la función de menú\n",
+    "    print()\n",
     "    print(\"1. Añadir paciente.\")\n",
-    "    print(\"2. Ver paciente.\")\n",
+    "    print(\"2. Ver pacientes.\")\n",
     "    print(\"3. Modificar paciente.\")\n",
     "    print(\"4. Eliminar paciente.\")\n",
     "    print(\"0. Salir.\\n\\n\")"
@@ -22,24 +23,208 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_person(a,b,c):\n",
-    "    comp = comprobar(c)\n",
-    "    print(comp)\n",
-    "    if comprobar(c) != \"<class 'int'>\":\n",
-    "        print(\"El telefono solo debe incluir números.\")\n",
+    "def add_patient(a,b,c):      #función para añadir pacientes\n",
     "        \n",
-    "    elif comprobar(a) != \"<class 'str'>\" and comprobar(b) != \"<class 'str'>\":\n",
-    "        print(\"El nombre y apellido solo debe contener letras.\")\n",
+    "    if comp_str(a) != True or comp_str(b) != True:   #Comprobación de que los dos primeros parámetros son strings,\n",
+    "                                                         #ya que se trata de nombre y apellidos. Llamando a la función comp_str\n",
+    "        print(\"El nombre solo debe contener letras.\")\n",
+    "        return False\n",
+    "    \n",
+    "    elif comp_str(b) != True:\n",
     "        \n",
-    "    else:\n",
-    "        datos = a, b, c\n",
-    "        pacientes.append(datos)\n",
-    "        return pacientes"
+    "        print (\"Los apellidos solo debe contener letras.\")\n",
+    "        return False\n",
+    "    \n",
+    "    elif comp_int(c) != True:  #Comprobación de que el 3r parametro es de tipo integrer, solo números enteros,\n",
+    "                              #ya que se trata del id. Llamando a la función comp_int\n",
+    "        print(\"El id solo debe incluir números.\")\n",
+    "        return False\n",
+    "    \n",
+    "    datos = a, b, c\n",
+    "    pacientes.append(datos)         #Añadimos el paciente a la lista.\n",
+    "    return pacientes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
+   "id": "affected-hampton",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_patient():             #Función que muestra todos los pacientes de la lista\n",
+    "    \n",
+    "    contador = 0       #Variables para mostrar la salida más sencilla y facilitar la interacción.\n",
+    "    \n",
+    "    for i in pacientes:    #Bucle que controla cada elemento de la lista, ya que esta compuesto por 3 valores, nombre\n",
+    "                           #apellidos y teléfono.\n",
+    "        contador += 1\n",
+    "        contador2 = 0\n",
+    "        \n",
+    "        for s in i:    #Bucle que controla uno por uno los elementos de i.\n",
+    "            \n",
+    "            if contador2 == 0:   #Comprobar si el contador es 0, para añadir el número delante del valor de la lista.\n",
+    "                print(contador,\".\",s, end=\" \")\n",
+    "                \n",
+    "            else:\n",
+    "                print(s, end= \" \")\n",
+    "            contador2 += 1\n",
+    "            \n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fantastic-seeker",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mod_patient(a):   #Función que permite modificar datos de los pacientes\n",
+    "    \n",
+    "    pos = a - 1 #Variable que controla la posición de la lsta a modificar.\n",
+    "    \n",
+    "    #Comprobaciones de los datos que introducimos.\n",
+    "    if comp_int(num_id) == False:\n",
+    "        print(\"El id solo debe incluir números.\")\n",
+    "        return False\n",
+    "        \n",
+    "    elif comp_str(name) == False or comp_str(surname) == False:\n",
+    "        print(\"El nombre y apellido solo debe contener letras.\")\n",
+    "        return False\n",
+    "    \n",
+    "    #Establecemos los datos nuevos y utilizando .append los añadimos a la posición indicada\n",
+    "    new_dat = name, surname, num_id\n",
+    "    pacientes[pos] = new_dat\n",
+    "    return pacientes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "understanding-riding",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mod_patient_name(a):   #Función que permite modificar el nombre del paciente\n",
+    "    \n",
+    "    pos = a - 1 #Variable que controla la posición de la lsta a modificar.   \n",
+    "    \n",
+    "    if comp_str(name) == False:    #Condición de comprobación de los datos\n",
+    "        print(\"El nombre solo debe contener letras.\")\n",
+    "        return False\n",
+    "        \n",
+    "    contador = 0\n",
+    "    for i in pacientes[pos]:   #Bucle para mantener los apellidos y el id del paciente.\n",
+    "        if contador == 1:\n",
+    "            surname == i\n",
+    "            \n",
+    "        elif contador == 2:\n",
+    "            num_id = i\n",
+    "        \n",
+    "        contador += 1\n",
+    "            \n",
+    "    #Establecemos los datos nuevos y utilizando .append los añadimos a la posición indicada\n",
+    "    new_dat = name, surname, num_id\n",
+    "    pacientes[pos] = new_dat\n",
+    "    return pacientes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "about-safety",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mod_patient_surname(a): #Función que permite modificar los apellidos del paciente\n",
+    "    \n",
+    "    pos = a - 1 #Variable que controla la posición de la lsta a modificar.   \n",
+    "    \n",
+    "    if comp_str(surname) == False:   #Condición de comprobación de los datos\n",
+    "        print(\"Los apellidos solo deben contener letras.\")\n",
+    "        return False\n",
+    "        \n",
+    "    contador = 0\n",
+    "    for i in pacientes[pos]:  #Bucle para mantener el nombre y el id del paciente.\n",
+    "        if contador == 0:\n",
+    "            name == i\n",
+    "            \n",
+    "        elif contador == 2:\n",
+    "            num_id = i\n",
+    "        \n",
+    "        contador += 1\n",
+    "            \n",
+    "    #Establecemos los datos nuevos y utilizando .append los añadimos a la posición indicada\n",
+    "    new_dat = name, surname, num_id\n",
+    "    pacientes[pos] = new_dat\n",
+    "    return pacientes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "recreational-formation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mod_patient_id(a):     #Función que permite modificar el id del paciente\n",
+    "    \n",
+    "    pos = a - 1 #Variable que controla la posición de la lsta a modificar.   \n",
+    "    \n",
+    "    #Condición de comprobación de los datos\n",
+    "    if comp_int(num_id) == False:\n",
+    "        print(\"El id solo debe contener números.\")\n",
+    "        return False\n",
+    "        \n",
+    "    contador = 0\n",
+    "    for i in pacientes[pos]:   #Bucle para mantener el nombre y los apellidos del paciente.\n",
+    "        if contador == 0:\n",
+    "            name == i\n",
+    "            \n",
+    "        elif contador == 1:\n",
+    "            surname = i\n",
+    "        \n",
+    "        contador += 1\n",
+    "            \n",
+    "    #Establecemos los datos nuevos y utilizando .append los añadimos a la posición indicada\n",
+    "    new_dat = name, surname, num_id\n",
+    "    pacientes[pos] = new_dat\n",
+    "    return pacientes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "shared-weekend",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def menu_mod_patient():  #Función que realiza la función de menú para modificar pacientes.\n",
+    "    print()\n",
+    "    print(\"1. Modificar nombre.\")\n",
+    "    print(\"2. Modificar apellidos.\")\n",
+    "    print(\"3. Modificar id.\")\n",
+    "    print(\"4. Modificar todo.\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "starting-cisco",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def del_patient(a):\n",
+    "    pos = a - 1\n",
+    "    pacientes.pop(pos)\n",
+    "    return pacientes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3cec3cdc",
    "metadata": {},
    "outputs": [],
@@ -51,54 +236,106 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0520e1c",
+   "id": "attended-interim",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pacientes = []\n",
-    "nombre = str(input(\"Nombre: \"))\n",
-    "apellidos = str(input(\"Apellidos: \"))\n",
-    "tlf = int(input(\"Telefóno: \"))\n",
-    "print(add_person(nombre,apellidos,tlf))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "e24044b5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OK\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "if comp_int(tlf) == False:\n",
-    "    print(\"no\")\n",
-    "\n",
-    "else:\n",
-    "    print(\"OK\")"
+    "def comp_str(a):\n",
+    "    return isinstance(a, str)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9ef4475",
+   "id": "d0520e1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(add_person(nombre,apellidos,tlf))"
+    "pacientes = []"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ca0b0518",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "menu()    #Llamada a la función menu\n",
+    "\n",
+    "opcion = int(input(\"\\nOperación a realizar: \"))   #Pedir el valor de la opción a realizar\n",
+    "\n",
+    "while (opcion != 0):\n",
+    "    \n",
+    "    if opcion == 1:     #Llamada a la función añadir paciente\n",
+    "        name = input(\"Introduce el nombre del paciente: \")\n",
+    "        surname = input(\"Introduce los apellidos del paciente: \")\n",
+    "        num_id = input(\"introduce el número de identificación del paciente: \")\n",
+    "        add_patient(name,surname,num_id)\n",
+    "        print()\n",
+    "        \n",
+    "    elif opcion == 2:   #Llamada a la función ver pacientes\n",
+    "        show_patient()\n",
+    "        print()\n",
+    "    \n",
+    "    elif opcion == 3:   #LLamada a la función modificar paciente\n",
+    "        show_patient()\n",
+    "        modify = input(\"¿Qué paciente deseas modificar? (indica el número)\")\n",
+    "        menu_mod_patient()\n",
+    "        \n",
+    "        selection = int(input(\"¿Qué desea modificar? \"))\n",
+    "        if selection == 1:\n",
+    "            name = input(\"Introduce el nuevo nombre del paciente: \")\n",
+    "            mod_patient_name(modify)\n",
+    "            \n",
+    "        elif selection == 2:\n",
+    "            surname = input(\"Introduce los nuevos apellidos del paciente: \")\n",
+    "            mod_patient_surname(modify)\n",
+    "            \n",
+    "        elif selection == 3:\n",
+    "            num_id = input(\"introduce el nuevo número de identificación del paciente: \")\n",
+    "            mod_patient_id(modify)\n",
+    "        \n",
+    "        elif selection == 4:\n",
+    "            name = input(\"Introduce el nombre del paciente: \")\n",
+    "            surname = input(\"Introduce los apellidos del paciente: \")\n",
+    "            num_id = input(\"introduce el número de identificación del paciente: \")\n",
+    "            mod_patient(modify)\n",
+    "            \n",
+    "        print()\n",
+    "        \n",
+    "    elif opcion == 4:   #LLamada a la función eliminar paciente\n",
+    "        show_patient()\n",
+    "        delete = int(input(\"¿Qué paciente deseas eliminar? (indica el número)\"))\n",
+    "        del_patient(delete)\n",
+    "        print()\n",
+    "\n",
+    "        \n",
+    "    else:\n",
+    "        print(\"No has introducido una opción válida.\")\n",
+    "    \n",
+    "    menu()\n",
+    "    \n",
+    "    opcion = int(input(\"\\n\\nOperación a realizar: \"))    #Volver a pedir el valor de la opción a realizar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "prepared-pierce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if comp_int(45) != True:\n",
+    "    print(\"OK\")\n",
+    "else:\n",
+    "    print(\"N\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "coral-omaha",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -120,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.1+"
   }
  },
  "nbformat": 4,
